styles/style.css
/* место для вашего кода */

.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  margin: 92px 24px 96px;
}

.header__menu {
  padding: 44px 0px 40px 26px;
}

.header__links-list {
  display: flex;
  gap: 32px;
}

.header__links-list-item {
  letter-spacing: 0.15px;
  list-style: circle;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__link {
  font-weight: 400;
  font-size: 18px;
  text-underline-offset: 4px;
}

.header__link_active {
  text-decoration: none;
}

.header__logo {
  display: block;
  width: 136px;
  height: 105px;
}

.address {
  font-size: 18px;
  line-height: 24.3px;
  letter-spacing: 0.18px;
  text-underline-offset: 4px;
}

.header__address {
  padding: 5px 28px 0 191px;
}

.cover {
  position: relative;
  z-index: 0;
  background-image: url("../images/cover.jpg");
  background-repeat: no-repeat;
  background-position: -138px;
  background-size: cover;
}

.overlay {
  position: absolute;
  inset: 0;
  z-index: -1;
  background-color: rgb(0 0 0 / 0.6);
}

.cover-title {
  width: 100%;
  padding: 165px 50px 135px 50px;
}

.aligned-text {
  display: block;
  line-height: 1.15;
  letter-spacing: 30px;
  text-transform: uppercase;
  font-weight: 700;
  color: #FFF;
  font-size: 100px;
}

.letter-spacing-extended {
  letter-spacing: 60px;
}

.aligned-text_center {
  padding-top: 20px;
  line-height: 1;
  text-align: center;
}

.aligned-text_right {
  padding-top:20px;
  line-height: 1;
  letter-spacing: 30px;
  text-align: right;
}

.no-letter-spacing {
  letter-spacing: normal;
}

.cover__description {
  display: flex;
  align-items: center;
  gap: 79px;
  padding-bottom: 50px;
  padding-left: 78px;
}

.cover__description-text {
  color:#FFF;
  font-weight: 400;
  font-size: 22px;
  line-height: 28px;
  text-transform: uppercase;
  word-spacing: 18px;
}

.cover__description-text .letter-spacing-extended {
  letter-spacing: 25px;
}

.bet-button {
  padding: 12px 32px 12px 31px;
  border: 1px solid #FFF;
  color:#FFF;
  font-weight: 500;
  font-size: 22px;
  text-transform: uppercase;
  background-color: transparent;
  cursor: pointer;
}

.lots {
  margin: 179px 24px 146px 24px;
}

.lots__heading {
  padding-bottom: 27px;
  padding-left: 40px;
  color: #000;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
}

.lots__card-list {
  display:flex;
  flex-wrap: wrap;
  gap: 25px;
  list-style: none;
}

.lots__card-list-item {
  flex-grow: 1;
  flex-basis: 334px;
}

.card-link {
  display: block;
  height: 100%;
  text-decoration: none;
}

.card {
  position: relative;
  z-index: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  background-repeat: no-repeat;
  background-position: -105px;
  background-size: cover;
}

.card_type_film {
  background-image: url("../images/card-lot-01.jpg");
}

.card_type_book {
  background-image: url("../images/card-lot-02.jpg");
}

.card_type_picture {
  background-image: url("../images/card-lot-03.jpg");
}

.card__title {
  z-index: 2;
  padding: 51px 40px 0px;
  color: #FFF;
  font-weight: 700;
  font-size: 22px;
  line-height: 26.4px;
  text-decoration: underline solid #FFF 1px;
  text-underline-offset: 4px;
  text-transform: uppercase;
}

.card__text {
  z-index: 2;
  padding: 0 40px 48px;
  color: #FFF;
  font-weight: 400;
  font-size: 20px;
  line-height: 24px;
}

.card__text .letter-spacing-extended {
  letter-spacing: 2.6px;
}

.lots__look-more-link {
  display: block;
  margin: 30px 0 2px 40px;
  color: #000;
  font-size: 20px;
  text-underline-offset: 4px;
}

.about {
  display: grid;
  grid-template-columns: 334px auto;
  gap: 25px;
  margin: 146px 24px 180px;
}

.about__column {
  background-color: #FFF;
}

.about__logo {
  width: 240px;
  height: 240px;
  margin: 36px auto 0px;
  border-radius: 50%;
  text-align: center;
  background-color: #000;
}

.about__logo-image {
  width: 148px;
  margin-top: 64px;
}

.about__title {
  padding-top:136px;
  padding-bottom: 100px;
  color: #000;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
}

.about__text {
  display: flex;
  flex-direction: column;
  gap: 24px;
  font-size: 20px;
  line-height: 24px;
}

.letter-spacing-xs {
  letter-spacing: 0.2px;
}

.footer {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin: 184px 50px 100px;
}

.footer_address {
  padding: 0 120px 0 0;
}

.footer__menu {
  text-underline-offset: 4px;
}

.footer__menu-list {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer__menu-list-item {
  list-style: none;
}

.footer__menu-link {
  font-size: 18px;
}

.footer__menu-link_active {
  text-decoration: none;
}

.footer__social-list {
  display: flex;
  justify-content: end;
  gap: 48px;
}

.footer__social-list-item {
  list-style: none;
}

.footer__social-link {
  display: block;
}

.footer__social-icon {
  width: 48px;
  height: 48px;
}

